	+ Use the new row() and ids() API
	+ Bugfix: alias are deleted when user account is deleted
	+ Bugfix: when already exists the maildir, create a new account is
	not allowed
	+ Bugfix: fixed error in mail queue template: avoid to reference a
	possible udefined value
	+ Bugfix: running method in Greylist does not fail if there is not
	eventd fil
	+ Bugfix: force removal of previous data in backup
	+Bugfx: removed bad suprefluous call that was the source of
	, at least, restore errors
0.12.101
	+ Bugfix: Postgrey daemon is disabled by default
0.12.100
	+ EBox::MailUserLdap::userAccount and
	EBox::MailUserLdap::getUserLdapValue  dont longer assumme that the
	user exists
	+ Bugfix: MDSize attribute should not be restored in sytems with
	MDSize feature disabled
	+ Bugfix in logs: mail relayed to external smarthost is now
	logged, external smarthost relay denied action also logged, relay
	field now only logs relay data and no unrelated data
	+ Summary changed to reflect the changes in mailfilter module
	+ Added greylist support
	+ Added authentication for external smarthost
	+ Added TLS support for external smarthost
	+ Replaced courier with dovecot
	+ Simpler interface to choose mail retrieval protocols
0.12.99
	+ Add support for reporting
0.12.2
	+ Bugfix: Start POP3 over SSL (Port: 995)
0.12.1
	+ Bugfix: Use EBox::Types::Union::Text for unlimited message size
0.12
	+ Bugfix: Checkbox for unlimited size is unchecked, the field
	mentioned, i.e. Size (MB) is activated.
	+ Use the new MVC framework
	+ Add postfix to sasl group instead of dpkg-stateoverriding stuff
	+ Update INSTALL doc
	+ Use eBox OID number in LDAP schemas
0.11.101
	+ Fixed bug when removing users in non-quota installations
	+ Do not remove init rc scripts
	+ Add port 465 (SMTP over SSL) to mail service, old outlook version
	  will use this port
	+ Fixed bug in group alias that broke this feature for mail
	accounts which its name was different to the username
0.11.100