@@ -29,7 +29,7 @@ use EBox::Gettext;
 	<tr>
 %	foreach my $it (@order) {
 %		if ($it eq 'recipients') {
-%                  if (exists $row->{$it}) {
+%                  if ((exists $row->{$it}) and (defined $row->{it})) {
 			<td><% join(', ', @{$row->{$it}}) %></td>
 %                  } else {
                         <td></td>
